--- a/index.html
+++ b/index.html
@@ -73,25 +73,10 @@
                         <ul class="nav navbar-nav">
                             <li class="current-menu-item"><a href="#home">Home</a></li>
                             <li><a href="#couple">Couple</a></li>
-                            <li><a href="#story">Story</a></li>
-                            <li><a href="#event">Events</a></li>
+                            <li><a href="#story">Events</a></li>
                             <li><a href="#people">People</a></li>
                             <li><a href="#gallery">Gallery</a></li>
-                            <li><a href="#rsvp">RSVP</a></li>
-                            <li class="menu-item-has-children">
-                                <a href="javascript:void(0);">Blog</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog-width-sidebar.html">Blog With Sidebar</a></li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#Level3">Blog Details</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-single.html">Blog Details</a></li>
-                                            <li><a href="blog-single-sidebar.html">Blog Details Sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li><a href="#rsvp">Bless Us</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
                     <div class="bottom-border"></div>
@@ -190,7 +175,7 @@
                                 <div class="couple-text">
                                     <div class="couple-content">
                                         <h4>Dr Lata Narwani</h4>
-                                        <p>Hi I am Nancy Elizabeth. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
+                                        <p>Hi I am Lata Narwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
                                     </div>
 <!--                                    <div class="social-icon">
                                         <ul>
@@ -211,7 +196,7 @@
                                 <div class="couple-text">
                                     <div class="couple-content">
                                         <h4>Cs Manish Lokhwani </h4>
-                                        <p>Hi I am Nancy Elizabeth. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
+                                        <p>Hi I am Manish Lokhwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
                                     </div>
 <!--                                    <div class="social-icon">
                                         <ul>
@@ -355,7 +340,7 @@
                         <div class="cta-content">
                             <h2>Welcome to our big day</h2>
                             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or less normal distribution of letters</p>
-                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">RSVP</a></div>
+                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">Bless Us</a></div>
                            <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
                         </div>
                     </div>
@@ -739,7 +724,7 @@
                         <div class="rsvp-wrap">
                             <div class="col-12">
                                 <div class="section-title section-title-2 text-center">
-                                    <h2>Be Our rsvp</h2>
+                                    <h2>Bless Us </h2>
                                 </div>
                             </div>
                             <div class="contact-form form-style">
@@ -751,25 +736,7 @@
                                         <div class="col-12  col-sm-6">
                                             <input type="text" placeholder="Your Email*" id="email" name="email">
                                         </div>
-                                        <div class="col col-sm-6">
-                                            <select class="form-control" name="rsvp">
-                                                <option disabled selected>Number Of rsvp*</option>
-                                                <option>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
-                                                <option>4</option>
-                                            </select>
-                                        </div>
-                                        <div class="col col-sm-6">
-                                            <select class="form-control" name="events">
-                                                <option disabled selected>I Am Attending*</option>
-                                                <option>All events</option>
-                                                <option>Sham-e-sangeet</option>
-                                                <option>Behrana Sahib</option>
-                                                <option>Mehndi Sandhya</option>
-                                                <option>Wedding</option>
-                                            </select>
-                                        </div>
+
                                         <div class="col-12 col-sm-12">
                                             <textarea class="contact-textarea" placeholder="Message" name="notes"></textarea>
                                         </div>
@@ -789,62 +756,7 @@
                 </div>
             </div>
         </div>
-        <!-- rsvp-area end -->
-        <!-- getting-area start -->
-       <!-- <div class="gta-area">
-            <div class="container">
-                <div class="col-12">
-                    <div class="section-title text-center">
-                        <h2>Getting There</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
-                        <div class="row">
-                            <div class="heading col-md-12 col-sm-6">
-                                <h3>Transportation</h3>
-                                <div class="gta-content">
-                                    <p>industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
-                                </div>
-                                <div class="gta-img">
-                                    <img src="assets/images/gta/img-2.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="heading heading-2 col-md-12 col-sm-6">
-                                <h3>Accommodations</h3>
-                                <div class="gta-content">
-                                    <p>industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
-                                </div>
-                                <div class="gta-img">
-                                    <img src="assets/images/gta/img-1.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-        <!-- getting-area end -->
-        <!-- Gift Registration start -->
-       <!-- <div class="Gift-area pt&#45;&#45;100 pb&#45;&#45;30">
-            <div class="container">
-                <div class="col-12">
-                    <div class="section-title text-center">
-                        <h2>Gift Registration</h2>
-                    </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
-                </div>
-                <div class="gift-item">
-                    <div class="Gift-carousel owl-carousel">
-                        <img src="assets/images/gift/img-1.jpg" alt="clinet">
-                        <img src="assets/images/gift/img-2.jpg" alt="clinet">
-                        <img src="assets/images/gift/img-3.jpg" alt="clinet">
-                        <img src="assets/images/gift/img-4.jpg" alt="clinet">
-                    </div>
-                </div>
-            </div>
-        </div>-->
-        <!-- Gift Registration end -->
+
 
         <!-- start site-footer -->
         <footer class="site-footer">
@@ -865,10 +777,10 @@
         <!-- strat music-box -->
         <div class="music-box">
             <button class="music-box-toggle-btn">
-                <i class="ti-music-alt"></i>
+                <i class="fi flaticon-play-button"></i>
             </button>
             <div class="music-holder">
-                <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102137206&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                <iframe src="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1"></iframe>
             </div>
         </div>
         <!-- end music box -->
