--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="themepresss">
 
     <!-- Page Title -->
-    <title> Twain Love - Responsive HTML Wedding Template </title>
+    <title> Lata & Manish </title>
 
     <!-- Icon fonts -->
     <link href="assets/css/themify-icons.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                             <li><a href="#couple">Couple</a></li>
                             <li><a href="#story">Events</a></li>
                             <li><a href="#people">People</a></li>
-                            <li><a href="#gallery">Gallery</a></li>
+                           <!-- <li><a href="#gallery">Gallery</a></li>-->
                             <li><a href="#rsvp">Bless Us</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
@@ -107,7 +107,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
-                        </div> <!-- end slide-inner --> 
+                        </div> <!-- end slide-inner -->
                     </div> <!-- end swiper-slide -->
 
                     <div class="swiper-slide">
@@ -145,8 +145,8 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div> 
-                        </div> <!-- end slide-inner --> 
-                    </div><!-- end swiper-slide --> 
+                        </div> <!-- end slide-inner -->
+                    </div><!-- end swiper-slide -->
                 </div>
                 <!-- end swiper-wrapper -->
 
@@ -219,7 +219,7 @@
             <section class="count-down-section section-padding parallax" data-speed="7">
                 <div class="container">
                     <div class="col-12 text-center">
-                        <h2 class="big"><span>We Are Waiting For.....</span> The Big Day</h2>
+                        <h2 class="big"><span>We Are Waiting For.....</span> The Big Day <span>Bless us with your presence</span></h2>
                     </div>
                     <div class="row">
                         <div class="col-12">
@@ -254,7 +254,8 @@
                                     <div class="story-text right-align-text">
                                         <h3>Sham-e-Sangeet</h3>
                                         <span class="date">Dec 8 2020, 6 PM</span>
-                                        <p>Bollywood theme sangeet event, </p>
+                                        <p>We invite you to join us at Sangeet ceremony of our daughter's wedding. The event will be full of dance, music & joy followed by dinner.</p> <br>
+                                        <snap>Venue: </snap>  <p>The PL Palace, MG road, Sanjay Place, Agra  </p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=pl%20palace%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
                                 </div>
@@ -277,7 +278,8 @@
                                     <div class="story-text">
                                         <h3>Behrana Sahib </h3>
                                         <span class="date">Dec 9 2020, 11 AM</span>
-                                        <p>Behrana Sahib sindhi style</p>
+                                        <p>Your presence will be our great pleasure at behrana sahib of Jhulelal Ji. Join us and enjoy some sindhi style dance & music. Lunch to be followed. </p> <br>
+                                        <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=sindhu%20bhawan%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
                                 </div>
@@ -288,9 +290,10 @@
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
                                     <div class="story-text right-align-text">
-                                        <h3>Mehndi Sandhya</h3>
+                                        <h3></h3>
                                         <span class="date">Dec 9 2020, 5 PM</span>
-                                        <p>Mehndi function  </p>
+                                        <p> Join us and Mehandi ceremony and get some henna. </p>
+                                        <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=sindhu%20bhawan%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
                                 </div>
@@ -319,9 +322,10 @@
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
                                     <div class="story-text">
-                                        <h3>Our Wedding</h3>
+                                        <h3>Wedding</h3>
                                         <span class="date">Dec 11 2020, 2 PM</span>
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                                        <p>It is a great pleasure to invite you on the wedding day of our daughter. Please join us and bless her for happy and healthy life. Reception to be followed.</p>
+                                        <snap>Venue: </snap>  <p>Hotel Marwar Excellency, Jodhpur </p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=Hotel%20Marwar%20Excellency%2C%20Jodhpur&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
                                 </div>
@@ -339,15 +343,18 @@
                     <div class="col-lg-12">
                         <div class="cta-content">
                             <h2>Welcome to our big day</h2>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or less normal distribution of letters</p>
-                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">Bless Us</a></div>
+                            <p>Mr. Indra Kumar Narwani & Mrs. Mamta Narwani invite you to the wedding of their daughter.
+                                Please accept this as our personal invitation to celebrate our big day with us.
+                                The pleasure of your company at the marriage of our daughter is really important to us.</p>
+                            <div class="btn btn-3"><a href="#rsvp" class="go-rsvp-area">Send e-Blessings</a></div>
                            <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- cta area end-->         
+        </div>
+        <!-- cta area end-->
         <!-- event-area -->
       <!--  <div id="event" class="event-section">
             <div class="container">
@@ -492,7 +499,7 @@
                                         </div> -->
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
-                                        <h3>Indra Kumar Narwani</h3>
+                                        <h3>Mr. Indra Kumar Narwani</h3>
                                         <span>Bride's Father</span>
                                     </div>
                                 </div>
@@ -511,7 +518,7 @@
                                         </div> -->
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
-                                        <h3>Mamta Narwani</h3>
+                                        <h3>Mrs. Mamta Narwani</h3>
                                         <span>Bride's Mother</span>
                                     </div>
                                 </div>
@@ -530,8 +537,8 @@
                                         </div> -->
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
-                                        <h3>Ema Aliana</h3>
-                                        <span>Friend</span>
+                                        <h3>Mr. Manohar Lokwani </h3>
+                                        <span>Groom's Father</span>
                                     </div>
                                 </div>
                             </div>
@@ -549,23 +556,23 @@
                                         </div> -->
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
-                                        <h3>Joey Famira</h3>
-                                        <span>Friend</span>
+                                        <h3>Mrs. Renu Lokwani</h3>
+                                        <span>Groom's Mother</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 col-sm-6 grid">
+<!--                            <div class="col-lg-3 col-md-6 col-sm-6 grid">
                                 <div class="groomsmen-bridesmaid-wrap groomsmen-bridesmaid-wrap-2">
                                     <div class="groomsmen-bridesmaid-img">
                                         <img src="assets/images/groomsmen-bridesmaid/5.jpg" alt="">
-                            <!--            <div class="social-list">
+                            &lt;!&ndash;            <div class="social-list">
                                             <ul class="d-flex">
                                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
                                                 <li><a href="#"><span class="ti-linkedin"></span></a></li>
                                                 <li><a href="#"><span class="ti-pinterest"></span></a></li>
                                             </ul>
-                                        </div> -->
+                                        </div> &ndash;&gt;
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
                                         <h3>Criys stone</h3>
@@ -577,14 +584,14 @@
                                 <div class="groomsmen-bridesmaid-wrap">
                                     <div class="groomsmen-bridesmaid-img">
                                         <img src="assets/images/groomsmen-bridesmaid/6.jpg" alt="">
-                            <!--            <div class="social-list">
+                            &lt;!&ndash;            <div class="social-list">
                                             <ul class="d-flex">
                                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
                                                 <li><a href="#"><span class="ti-linkedin"></span></a></li>
                                                 <li><a href="#"><span class="ti-pinterest"></span></a></li>
                                             </ul>
-                                        </div> -->
+                                        </div> &ndash;&gt;
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
                                         <h3>Watson Lyn</h3>
@@ -596,14 +603,14 @@
                                 <div class="groomsmen-bridesmaid-wrap groomsmen-bridesmaid-wrap-2">
                                     <div class="groomsmen-bridesmaid-img">
                                         <img src="assets/images/groomsmen-bridesmaid/7.jpg" alt="">
-                            <!--            <div class="social-list">
+                            &lt;!&ndash;            <div class="social-list">
                                             <ul class="d-flex">
                                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
                                                 <li><a href="#"><span class="ti-linkedin"></span></a></li>
                                                 <li><a href="#"><span class="ti-pinterest"></span></a></li>
                                             </ul>
-                                        </div> -->
+                                        </div> &ndash;&gt;
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
                                         <h3>Chris Fletcher</h3>
@@ -615,21 +622,24 @@
                                 <div class="groomsmen-bridesmaid-wrap mb-0">
                                     <div class="groomsmen-bridesmaid-img">
                                         <img src="assets/images/groomsmen-bridesmaid/8.jpg" alt="">
-                            <!--            <div class="social-list">
+                            &lt;!&ndash;            <div class="social-list">
                                             <ul class="d-flex">
                                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
                                                 <li><a href="#"><span class="ti-linkedin"></span></a></li>
                                                 <li><a href="#"><span class="ti-pinterest"></span></a></li>
                                             </ul>
-                                        </div> -->
+                                        </div> &ndash;&gt;
                                     </div>
                                     <div class="groomsmen-bridesmaid-content">
                                         <h3>John Clyne</h3>
                                         <span>Friend</span>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
+
+
+
                         </div>
                     </div>
                 </div>
@@ -637,7 +647,7 @@
         </div>
         <!-- groomsmen-bridesmaid-area start -->
         <!--Start project area-->  
-        <section id="gallery" class="gallery-section section-padding">
+<!--        <section id="gallery" class="gallery-section section-padding">
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title text-center">
@@ -711,9 +721,9 @@
                             </div>
                         </div>
                     </div>
-                </div> <!-- end row -->
+                </div>
             </div>
-        </section>
+        </section>-->
         <!--End project area--> 
 
         <!-- rsvp-area strat -->
