--- a/index.html
+++ b/index.html
@@ -88,73 +88,31 @@
 
               
         <!-- start of hero -->
-        <section class="hero-slider hero-style-3">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-4.jpg">
-                            <div class="container">
-                                <div class="slide-content">
-                                    <div data-swiper-parallax="200" class="slide-subtitle">
-                                        <h4>WERE GETTING MARRIED</h4>
-                                    </div>
-                                    <div data-swiper-parallax="300" class="slide-title">
-                                        <h2>Save Our Date</h2>
-                                    </div>
-                                    <div data-swiper-parallax="400" class="slide-text">
-                                        <p>11 December 2020</p>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-                        </div> <!-- end slide-inner -->
-                    </div> <!-- end swiper-slide -->
-
-                    <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/1.jpg">
-                            <div class="container">
-                                <div class="slide-content">
-                                    <div data-swiper-parallax="200" class="slide-subtitle">
-                                        <h4>WERE GETTING MARRIED</h4>
-                                    </div>
-                                    <div data-swiper-parallax="300" class="slide-title">
-                                        <h2>Save Our Date</h2>
-                                    </div>
-                                    <div data-swiper-parallax="400" class="slide-text">
-                                        <p>11 December 2020</p>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div> 
-                        </div> <!-- end slide-inner --> 
-                    </div> <!-- end swiper-slide -->
-
-                    <div class="swiper-slide">
-                        <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-3.jpg">
-                            <div class="container">
-                                <div class="slide-content">
-                                    <div data-swiper-parallax="200" class="slide-subtitle">
-                                        <h4>WERE GETTING MARRIED</h4>
-                                    </div>
-                                    <div data-swiper-parallax="300" class="slide-title">
-                                        <h2>Save Our Date</h2>
-                                    </div>
-                                    <div data-swiper-parallax="400" class="slide-text">
-                                        <p>11 December 2020</p>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div> 
-                        </div> <!-- end slide-inner -->
-                    </div><!-- end swiper-slide -->
+        <section class="hero-slider hero-style-3 hero-style-2">
+            <div class="slide-wrapper">
+                <div id="spirit-header" class="spirit-header">
+                    <canvas id="spirit-canvas"></canvas>
                 </div>
-                <!-- end swiper-wrapper -->
-
-                <!-- swipper controls -->
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="slide">
+                    <div class="slide-inner slide-inner-2">
+                        <div class="container">
+                            <div class="slide-content">
+                                <div data-swiper-parallax="200" class="slide-subtitle">
+                                    <h4>WERE GETTING MARRIED</h4>
+                                </div>
+                                <div data-swiper-parallax="300" class="slide-title">
+                                    <h2>Save Our Date</h2>
+                                </div>
+                                <div data-swiper-parallax="400" class="slide-text">
+                                    <p>25 December 2019</p>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                    </div> <!-- end slide-inner -->
+                </div> <!-- end swiper-slide -->
             </div>
+            <!-- end swiper-wrapper -->
         </section>
         <!-- end of hero slider -->
          <!-- couple-area start -->
@@ -807,7 +765,7 @@
     <!-- Plugins for this template -->
     <script src="assets/js/jquery-plugin-collection.js"></script>
     <script src="assets/js/swiper.min.js"></script>
-
+    <script src="assets/js/spirit.js"></script>
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
 </body>
