--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                         <img src="assets/images/story/img-4.jpg" alt class="img img-responsive">
                                         <div class="video-btn">
                                             <ul>
-                                                <li><a href="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1" class="video-btn" data-type="iframe">
+                                                <li><a href="https://www.youtube.com/watch?v=tm-YxjrQVZw" class="video-btn" data-type="iframe">
                                                 <i class="fi flaticon-play-button"></i>
                                                 </a>
                                                 </li>
@@ -748,7 +748,7 @@
                 <i class="fi flaticon-play-button"></i>
             </button>
             <div class="music-holder">
-                <iframe src="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1"></iframe>
+                <iframe src="https://www.youtube.com/watch?v=tm-YxjrQVZw"></iframe>
             </div>
         </div>
         <!-- end music box -->
