--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title text-center">
-                        <h2>Happy Cuple</h2>
+                        <h2>Happy Couple</h2>
                     </div>
                 </div>
                 <div class="couple-wrap">
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="couple-text">
                                     <div class="couple-content">
-                                        <h4>Dr Lata Narwani</h4>
+                                        <h4>Dr. Lata Narwani</h4>
                                         <p>Hi I am Lata Narwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
                                     </div>
 <!--                                    <div class="social-icon">
@@ -153,7 +153,7 @@
                                 </div>
                                 <div class="couple-text">
                                     <div class="couple-content">
-                                        <h4>Cs Manish Lokhwani </h4>
+                                        <h4>CS Manish Lokhwani </h4>
                                         <p>Hi I am Manish Lokhwani. I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.I am going to introduce myself.I am a professional graphic designer professional graphic designer going to introduce myself.</p>
                                     </div>
 <!--                                    <div class="social-icon">
